--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 <li><a href="#">Wallet</a></li>
             </ul>
         </nav>
+
     </header>
+    <hr>
     <main>
         <section id="banner">
             <div class="banner_textos">
@@ -34,7 +36,7 @@
                 <a href="#">Save now</a>
             </div>
             <div><img src="./imagens/mulherBanner.png"></div>
-            <img src="./imagens/graficoBanner.png">
+            <img src="./imagens/graficoBanner.png" id="grafico">
         </section>
         <section id="parteDois">
             <div class="parteDois_textos">
@@ -99,7 +101,7 @@
                         <br>hemendra.mali72@gmail.com</p>
                 </div>
             </div>
-            <h1>copright 2022 Hemendra Mali. All right reserved</h1>
+            <h1>copright 2022 Hemendra Mali. All right reserved &copy;</h1>
         </footer>
     </main>
 
